<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>flatland</name>
  <version>1.1.3</version>
  <description>
    This is the metapackage for flatland.
  </description>
  <maintainer email="joseph@avidbots.com">Joseph Duchesne</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>flatland_msgs</exec_depend>
  <exec_depend>flatland_plugins</exec_depend>
  <exec_depend>flatland_server</exec_depend>
  <exec_depend>flatland_viz</exec_depend>
  <export><metapackage />
  <build_type>ament_cmake</build_type>
  </export></package>