<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>arena_evaluation_msgs</name>
  <version>1.0.0</version>
  <description>messages and services for arena_evaluation</description>
  <maintainer email="edu@vshch.com">Volodymyr Shcherbyna</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
  </export>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
