<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>cob_sick_s300</name>
  <version>0.7.11</version>
  <description>This package published a laser scan message out of a Sick S300 laser scanner.</description>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>
  <maintainer email="felixmessmer@gmail.com">Felix Messmer</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://ros.org/wiki/cob_sick_s300</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>boost</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>boost</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
