<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>cob_twist_controller</name>
  <version>0.8.20</version>
  <description>
  The main purpose of the cob_twist_controller is to convert target twists into joint velocities. 
  Therefore it makes use of several implemented inverse kinematics approaches at the first order differential level. 
  The inverse differential kinematics solver considers kinematic chain extensions, singularity robustness, 
  redundancy resolution and priority-based methods.
  To avoid hardware destruction there is a limiter interface active as well. 
  Via parameter server users can dynamically configure the solving strategy. 
  </description>
  <author email="fxm@ipa.fhg.de">Felix Messmer</author>
  <author email="marco.bezzon@googlemail.com">Marco Bezzon</author>
  <author email="christoph.mark@googlemail.com">Christoph Mark</author>
  <author email="fjmorenom@unal.edu.co">Francisco Moreno</author>
  <maintainer email="felixmessmer@gmail.com">Felix Messmer</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>roslint</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>cob_control_msgs</build_depend>
  <build_depend>cob_srvs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>kdl_conversions</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend condition="$ROS_DISTRO == melodic">orocos_kdl</build_depend>
  <build_depend condition="$ROS_DISTRO == noetic">liborocos-kdl-dev</build_depend>
  <build_depend condition="$ROS_DISTRO == noetic">liborocos-kdl</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <exec_depend>cob_frame_tracker</exec_depend>
  <exec_depend>cob_script_server</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-matplotlib</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-matplotlib</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-six</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-six</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>boost</exec_depend>
  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>cob_control_msgs</exec_depend>
  <exec_depend>cob_srvs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>kdl_conversions</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend condition="$ROS_DISTRO == melodic">orocos_kdl</exec_depend>
  <exec_depend condition="$ROS_DISTRO == noetic">liborocos-kdl-dev</exec_depend>
  <exec_depend condition="$ROS_DISTRO == noetic">liborocos-kdl</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <export>
    <cob_twist_controller plugin="${prefix}/controller_interface_plugins.xml" />
  </export>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
