<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>cohan_msgs</name>
  <version>0.0.2</version>
  <description>agent message definitions (for human aware multi-agent navigation planning)</description>
  <author email="ptsingaman@laas.fr">Phani Teja Singamaneni</author>
  <author email="harmish@laas.fr">harmish khambhaita</author>
  <maintainer email="ptsingaman@laas.fr">Phani Teja Singamaneni</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
