<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>barn_challenge</name>
  <version>0.0.0</version>
  <description>The barn_challenge package</description>
  <maintainer email="nm9ur@todo.todo">nm9ur</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>nav_core</build_depend>
  <exec_depend>nav_core</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
