<?xml version='1.0' encoding='utf-8'?>
<package format="3">
    <name>fake_localization</name>
  <version>1.17.3</version>
  <description>A ROS node that simply forwards odometry information.</description>
  <author>Ioan A. Sucan</author>
  <author>contradict@gmail.com</author>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <maintainer email="mfergs7@gmail.com">Michael Ferguson</maintainer>
  <maintainer email="ahoy@fetchrobotics.com">Aaron Hoy</maintainer>
  <license>BSD</license>
  <url>http://wiki.ros.org/fake_localization</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>angles</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>tf2_ros</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rosconsole</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
