<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>gazebo_ros_2Dmap_plugin</name>
  <version>0.0.0</version>
  <description>Gazebo simulator plugin to automatically generate a 2D occupancy map from the simulated world at a given height.</description>
  <maintainer email="kollmitz@informatik.uni-freiburg.de">Marina Kollmitz</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>xacro</build_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
