<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>global_planner</name>
  <version>1.17.3</version>
  <description>
     A path planner library and node.
  </description>
  <author>David Lu!!</author>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <maintainer email="mfergs7@gmail.com">Michael Ferguson</maintainer>
  <maintainer email="ahoy@fetchrobotics.com">Aaron Hoy</maintainer>
  <license>BSD</license>
  <url>http://wiki.ros.org/global_planner</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>angles</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>navfn</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>tf2_ros</build_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_core</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>navfn</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <export>
      <nav_core plugin="${prefix}/bgp_plugin.xml" />
  </export>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
