<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>jackal_msgs</name>
  <version>0.8.8</version>
  <description>Messages exclusive to Jackal, especially for representing low-level motor commands and sensors.</description>
  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>
  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/jackal_msgs</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
  </export>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
