<?xml version='1.0' encoding='utf-8'?>
<package format="3">
    <name>mbf_abstract_core</name>
  <version>0.4.0</version>
  <description>
        This package provides common interfaces for navigation specific robot actions. It contains the AbstractPlanner, AbstractController and AbstractRecovery plugin interfaces. This interfaces have to be implemented by the plugins to make the plugin available for Move Base Flex. The abstract classes provides a meaningful interface enabling the planners, controllers and recovery behaviors to return information, e.g. why something went wrong. Derivided interfaces can, for example, provide methods to initialize the planner, controller or recovery with map representations like costmap_2d, grid_map or other representations.
    </description>
  <author email="spuetz@uos.de">Sebastian Pütz</author>
  <author email="santos@magazino.eu">Jorge Santos</author>
  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
  <maintainer email="santos@magazino.eu">Jorge Santos</maintainer>
  <license>BSD-3</license>
  <url>http://wiki.ros.org/mbf_abstract_core</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
      <rosdoc config="rosdoc.yaml" />
  </export>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
